<resources>
    <string name="app_name">LifePlan</string>
    <string name="title_activity_login">Ingresar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="facebook_app_id">560524021067554</string>
    <string name="fb_login_protocol_scheme">fb560524021067554</string>
    <string name="title_activity_tablero_principal">TableroPrincipal</string>
    <string name="tab_text_1">Tablero</string>
    <string name="tab_text_2">Metas</string>
    <string name="tab_text_3">Agenda</string>
    <string name="tab_text_4">Calendario</string>
    <string name="tab_text_5">Recordar</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="txt_etiqueta">Etiqueta</string>
    <string name="txt_hora">Hora</string>
    <string name="txt_agregar">Agregar</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="txt_nueva_actividad">Agregar nueva actividad</string>
    <string name="txt_nueva_meta">Agregar nueva meta</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="categoria">Categoria</string>
    <string name="meta">Meta</string>

</resources>
