<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NuevaActividad" android:orientation="horizontal">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_margin="10dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etEtiqueta" android:hint="@string/txt_etiqueta"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:ems="10"
                    android:id="@+id/etHora" android:hint="@string/txt_hora"/>
            <Button
                    android:text="@string/txt_agregar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btnAgregar"
                    android:background="@drawable/borde_redondo" android:layout_margin="5dp"/>
            <Button
                    android:text="@string/txt_cancelar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btnCancelar"
                    android:background="@drawable/borde_redondo" android:layout_margin="5dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>