<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NuevaMeta">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_margin="10dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tvAgregarMeta"
                    android:text="@string/txt_nueva_meta"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" android:gravity="center_horizontal"
                    android:textStyle="bold"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etEtiqueta" android:hint="@string/txt_etiqueta" android:layout_marginTop="10dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                        android:layout_width="318dp"
                        android:layout_height="wrap_content"
                        android:inputType="time"
                        android:ems="10"
                        android:id="@+id/etFechaInicio" android:hint="Fecha inicio"/>
                <android.support.design.widget.FloatingActionButton
                        android:layout_width="129dp"
                        android:layout_height="wrap_content"
                        android:clickable="true" app:srcCompat="@drawable/ic_icono_calendario_white"
                        android:id="@+id/fabFechaInicio" android:layout_weight="1"
                        app:backgroundTint="@color/colorPrimary"
                        android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                        android:layout_width="318dp"
                        android:layout_height="wrap_content"
                        android:inputType="time"
                        android:ems="10"
                        android:id="@+id/etFechaFinal" android:hint="Fecha final"/>
                <android.support.design.widget.FloatingActionButton
                        android:layout_width="129dp"
                        android:layout_height="wrap_content"
                        android:clickable="true" app:srcCompat="@drawable/ic_icono_calendario_white"
                        android:id="@+id/fabFechaFinal" android:layout_weight="1"
                        app:backgroundTint="@color/colorPrimary"
                        android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etCategoria" android:hint="Categoría"/>
            <Button
                    android:text="@string/txt_agregar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btnAgregar"
                    android:background="@drawable/borde_redondo" android:layout_margin="5dp"/>
            <Button
                    android:text="@string/txt_cancelar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btnCancelar"
                    android:background="@drawable/borde_redondo" android:layout_margin="5dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>